WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
245071
[ATSPI] ASSERTION FAILED: isTableComponent(*child) || isTableComponent(*this) || child->parentObject() == this
https://bugs.webkit.org/show_bug.cgi?id=245071
Summary
[ATSPI] ASSERTION FAILED: isTableComponent(*child) || isTableComponent(*this)...
Carlos Garcia Campos
Reported
2022-09-12 05:40:48 PDT
This happens running test accessibility/anonymous-render-block-in-continuation-causes-crash.html with assertions enabled. In ATSPI we always add the list item marker as the first child of the list item, no matter where the marker actually is in the tree.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-09-12 05:41:00 PDT
<
rdar://problem/99818534
>
Carlos Garcia Campos
Comment 2
2022-09-12 05:44:50 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/4256
Vitaly Dyackhov
Comment 3
2022-09-12 10:23:40 PDT
Pull request:
https://github.com/WebKit/webkit/pull/4268
EWS
Comment 4
2022-09-13 01:34:30 PDT
Committed
254424@main
(0357edf07e3b): <
https://commits.webkit.org/254424@main
> Reviewed commits have been landed. Closing PR #4268 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug