[ATSPI] ASSERTION FAILED: isTableComponent(*child) || isTableComponent(*this) || child->parentObject() == this https://bugs.webkit.org/show_bug.cgi?id=245071

Reviewed by NOBODY (OOPS!).

This happens running test
accessibility/anonymous-render-block-in-continuation-causes-crash.html
with assertions enabled. In ATSPI we always add the list item marker as
the first child of the list item, no matter where the marker actually is
in the tree.

* Source/WebCore/accessibility/AccessibilityObject.cpp:
(WebCore::isAtspiListItemMarker):
(WebCore::AccessibilityObject::insertChild):